some fix and header section mobileP design completed

--- a/src/App.scss
+++ b/src/App.scss
@@ -22,6 +22,9 @@ body {
    max-width: 1250px;
    margin: 0 auto;
    padding: 0 25px;
+   @include mobileP {
+      padding: 0 15px;
+   }
 }
 
 .h1-size {
@@ -35,6 +38,9 @@ body {
    @include mobileL {
       font-size: 44px;
    }
+   @include mobileP {
+      font-size: 38px;
+   }
 
 }
 
@@ -46,6 +52,9 @@ body {
    @include mobileL {
       font-size: 35px;  
    }
+   @include mobileP {
+      font-size: 29px;
+   }
 }
 
 .h3-size {
@@ -55,6 +64,9 @@ body {
    color: $neutral-700;
    @include mobileL {
       font-size: 22px;
+   }
+   @include mobileP {
+      font-size: 20px;
    }
 }
 
