--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -15,6 +15,10 @@
    @include mobileL {
       padding: 16px 42px;
    }
+   @include mobileP {
+      padding: 16px 30px;
+      width: 100%;
+   }
 
    &:hover {
       transform: translateY(-5px);
