--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -20,6 +20,10 @@
             padding-top: 20px;
             padding-bottom: 20px;
          }
+         // @include mobileP {
+         //    padding-top: 15px;
+         //    padding-bottom: 15px;
+         // }
 
          .header-logo {
             @include tablet {
@@ -79,6 +83,10 @@
                   width: 56px;
                   height: 56px;
                }
+               @include mobileP {
+                  width: 47px;
+                  height: 47px;
+               }
             }
 
             span {
@@ -124,7 +132,6 @@
       }
    }
 
-
    // nav overlay 
    .nav-overlay {
       position: absolute;
@@ -137,7 +144,7 @@
 
       .nav-item-overlay {
          background-color: $neutral-100;
-         padding: 0 25px 20px;
+         padding: 0 25px 10px;
          position: absolute;
          top: 0;
          left: 0;
@@ -146,6 +153,10 @@
          transition: 0.35s ease-out;
          transform: translateY(-100%);
          border-bottom: 1px solid $neutral-400;
+
+         @include mobileP {
+            padding-top: 18px;
+         }
 
          &.active {
             transform: translateY(0);
@@ -157,6 +168,28 @@
             padding: 10px 0;
             margin-bottom: 16px;
             text-align: left;
+
+            @include mobileP {
+               font-size: 18px;
+               margin-bottom: 12px;
+            }
+         }
+
+         .header-email {
+            font-size: 26px;
+
+            @include mobileP {
+               font-size: 20px;
+            }
+            .email {
+               @include flex(flex-start, center);
+   
+               img {
+                  margin-right: 12px;
+                  width: 25px;
+                  height: 25px;
+               }
+            }
          }
 
       }
